# podcast-transcribe

./: .gitignore  README.md  app.py  environment.yaml  pyproject.toml  requirements.txt
examples/: batch_summarize_transcripts.py  combined_podcast_transcription.py  combined_transcription.py  cpp_example.py  llm_router_demo.py  simple_asr.py  simple_diarization.py  simple_example.py  simple_llm.py  simple_rss_parser.py  simple_speaker_identify.py  summarize_transcript_with_mlx_qwen.py  summarize_transcript_with_qwen.py  summarize_with_qwen.py
src/podcast_transcribe/: __init__.py  audio.py  cli.py  schemas.py  transcriber.py
src/podcast_transcribe/asr/: asr_base.py  asr_distil_whisper.py  asr_distil_whisper_mlx.py  asr_distil_whisper_transformers.py  asr_parakeet_mlx.py  asr_router.py
src/podcast_transcribe/diarization/: diarization_pyannote.py  diarization_pyannote_mlx.py  diarization_pyannote_transformers.py  diarizer_base.py  diarizer_router.py
src/podcast_transcribe/llm/: README.md  llm_base.py  llm_gemma.py  llm_gemma_base.py  llm_gemma_mlx.py  llm_gemma_transfomers.py  llm_phi4_transfomers.py  llm_router.py
src/podcast_transcribe/rss/: podcast_rss_parser.py
src/podcast_transcribe/summary/: speaker_identify.py
src/podcast_transcribe/utils/: diarization.py  summarization.py  transcription.py
src/podcast_transcribe/webui/: app.py
tests/: test_transcription.py
