[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-transcribe"
version = "0.1.0"
description = "一个用于转录并总结播客音频内容的工具"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pydub",
    "numpy",
    "openai-whisper",
    "pyannote.audio",
    "transformers",
    "torch",
    "soundfile",
]

[project.optional-dependencies]
whisper-cpp = ["pywhispercpp>=1.3.0"]
bitsandbytes
accelerate

[project.scripts]
podcast-transcribe = "podcast_transcribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_transcribe"] 